TopNav: fix nav-item vertical align.

--- a/src/css/Kaciras.less
+++ b/src/css/Kaciras.less
@@ -87,10 +87,9 @@ html {
 
 .nav-item {
 	display: inline-block;
-	vertical-align: top;
 
-	padding: .8rem 1.5rem;
-	height: 100%;
+	padding: 0 1.5rem;
+	line-height: 3rem; // 与NAV高度一致
 
 	font-size: 16px;
 	background-color: transparent;
